--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="test/junit/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src/test/junit"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/SDKs/OpenNLP/lib/jwnl-1.3.3.jar"/>
-	<classpathentry kind="lib" path="D:/SDKs/OpenNLP/lib/opennlp-maxent-3.0.2-incubating.jar"/>
-	<classpathentry kind="lib" path="D:/SDKs/OpenNLP/lib/opennlp-tools-1.5.2-incubating.jar"/>
-	<classpathentry kind="lib" path="D:/SDKs/OpenNLP/lib/opennlp-uima-1.5.2-incubating.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="lib/apache-opennlp-1.5.3/lib/jwnl-1.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/apache-opennlp-1.5.3/lib/opennlp-maxent-3.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/apache-opennlp-1.5.3/lib/opennlp-tools-1.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/apache-opennlp-1.5.3/lib/opennlp-uima-1.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="lib/junit/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
