--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.settings/org.eclipse.jdt.core.prefs
 /.settings/org.eclipse.wst.common.component
 /.settings/org.eclipse.wst.common.project.facet.core.xml
+bin
